               regenerations points was <=3), fixed,

             • fitting is now allowed with at leat two regenerations
               points.

         • ‘writeR2BIN()’

             • Function broke if information in SEQUENCE, COMMENT or
               USER was always NA. Corrected.

  Internals:

         • Switch from inlinedocs to roxygen2 to build the manuals
           (#193)

Changes in version 0.4.3 (17th, April 2015):

  Note on the update:

         • This is an unplanned update but it was necessary as with the
           last package version (0.4.2) unfortunately we introduced
           (again) a bug in the error calculation routine of the
           function plot_GrowthCurve().  Due to this the error of the
           resulting De became unrealistically small.

  Bugfixes and changes:

         • ‘calc_OSLLxTxRatio()’

             • Support for ‘RLum.Data.Curve’ objects implemented.

         • ‘calc_MinDose()’

             • Fixed a false argument in ‘parallel::makeCluster()’ that
               unintentionally required the 'snow' package.

         • ‘analyse_SAR.CWOSL()’

             • If the threshold for the rejection criteria was reached
               due an error this information was not properly stored in
               the output object (i.e. every time 'RC.Status' was set
               to 'OK' instead of 'FAILED'); corrected (#180).

         • ‘extract_IrradiationTimes()’

             • Argument ‘file.XSYG’ replaced by ‘object’ for the sake
               of argument consistency on the package,

             • allow input for ‘RLum.Analysis’ object. In such cases
               the arguments ‘file.BINX’ and ‘recordType’ are ignored.
               This mode allows for more flexibility in applying this
               function,

             • new argument ‘compatibility.mode’ to trigger the binary
               write output of the BIN/BINX-file,

             • additionally now the time between the steps is exported