@@ -25,7 +25,6 @@ importFrom(raster,nlayers)
 importFrom(raster,plotRGB)
 importFrom(raster,raster)
 importFrom(rgl,persp3d)
-importFrom(sp,polygons)
 importFrom(zoo,as.Date)
 importFrom(zoo,as.Date.numeric)
 useDynLib(Luminescence)
