@@ -82,7 +82,6 @@
 #' @importFrom matrixStats rowDiffs
 #' @importFrom XML xmlSize xmlValue xmlAttrs xmlRoot xmlTreeParse getEncoding xmlErrorCumulator
 #' @importFrom Rcpp evalCpp
-#' @importFrom sp polygons
 #' @importFrom rgl persp3d
 #' @importFrom minpack.lm nlsLM nls.lm.control
 #' @exportPattern ^[[:alpha:]]+
