@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Tue May  5 20:26:13 2015
+% Tue May  5 23:11:39 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -70,9 +70,9 @@
   36 & ExampleData.XSYG & Example data for a SAR OSL measurement and a TL spectrum using a lexsyg$<$br /$>$ reader & $<$br /$>$ Example data from a SAR OSL measurement and a TL spectrum for package$<$br /$>$ Luminescence imported from a Freiberg Instruments XSYG file using the$<$br /$>$ function  readXSYG2R .$<$br /$>$ &  &  &  &  \\ 
   37 & extract\_IrradiationTimes & Extract irradiation times from an XSYG file & $<$br /$>$ Extracts irradiation times, dose and times since last irradiation, from a$<$br /$>$ Freiberg Instruments XSYG-file. These information can be further used to$<$br /$>$ update an existing BINX-file$<$br /$>$ & 0.2.1 & 2015-04-30 & 13:39:26
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  38 & fit\_CWCurve & Nonlinear Least Squares Fit for CW-OSL curves [beta version] & $<$br /$>$ The function determines the weighted least-squares estimates of the$<$br /$>$ component parameters of a CW-OSL signal for a given maximum number of$<$br /$>$ components and returns various component parameters. The fitting procedure$<$br /$>$ uses the  nls  function with the  port  algorithm.$<$br /$>$ & 0.5.1 & 2015-05-05 & 18:27:45
+  38 & fit\_CWCurve & Nonlinear Least Squares Fit for CW-OSL curves [beta version] & $<$br /$>$ The function determines the weighted least-squares estimates of the$<$br /$>$ component parameters of a CW-OSL signal for a given maximum number of$<$br /$>$ components and returns various component parameters. The fitting procedure$<$br /$>$ uses the  nls  function with the  port  algorithm.$<$br /$>$ & 0.5.1 & 2015-05-05 & 23:06:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  39 & fit\_LMCurve & Nonlinear Least Squares Fit for LM-OSL curves & $<$br /$>$ The function determines weighted nonlinear least-squares estimates of the$<$br /$>$ component parameters of an LM-OSL curve (Bulur 1996) for a given number of$<$br /$>$ components and returns various component parameters. The fitting procedure$<$br /$>$ uses the function  nls  with the  port  algorithm.$<$br /$>$ & 0.2.17 & 2015-05-05 & 18:27:45
+  39 & fit\_LMCurve & Nonlinear Least Squares Fit for LM-OSL curves & $<$br /$>$ The function determines weighted nonlinear least-squares estimates of the$<$br /$>$ component parameters of an LM-OSL curve (Bulur 1996) for a given number of$<$br /$>$ components and returns various component parameters. The fitting procedure$<$br /$>$ uses the function  nls  with the  port  algorithm.$<$br /$>$ & 0.2.17 & 2015-05-05 & 23:06:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   40 & get\_Layout & Collection of layout definitions & $<$br /$>$ This helper function returns a list with layout definitions for homogeneous$<$br /$>$ plotting.$<$br /$>$ & 0.1 & 2015-04-30 & 11:57:10
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
