@@ -177,7 +177,7 @@ global minimum rather than a local minimum! In any case of doubt, the use of
 manual start values is highly recommended.
 }
 \section{Function version}{
- 0.2.17 (2015-05-05 18:27:45)
+ 0.2.17 (2015-05-05 23:06:46)
 }
 \examples{
 ##(1) fit LM data without background subtraction
